<resources>
    <string name="app_name">心晴管家</string>
    <string name="doctor_account">我叫心晴管家@114.215.179.130</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="comp_name">上海秀颖实业有限公司</string>
    <string name="game_name">曼陀罗</string>
    <string name="prepare">准备</string>
    <string name="commit">完成</string>
    <string name="start">开始</string>
    <string name="opration_start">请操作，倒计时开始</string>
    <string name="time_over">时间到</string>
    <string name="replay">再玩一次</string>
    <string name="end">结束游戏</string>
    <string name="answer_order">正确图案</string>
    <string name="mine_order">我的图案</string>
    <string name="point">分数:%d</string>
    <string name="easy">简单</string>
    <string name="normal">中等</string>
    <string name="difficult">困难</string>
    <string name="petal_num">花瓣数：</string>
    <string name="time_level">时间数：</string>
    <string name="color_level">色彩数：</string>
    <string name="thought_reading">读心术</string>
    <string name="next_question">下一题</string>
    <string name="pre_question">上一题</string>
    <string name="not_found_exception">找不到文件</string>
    <string name="unsupported_encoding">文件转码失败</string>
    <string name="io_exception">文件读取失败</string>
    <string name="right">正确</string>
    <string name="error">错误</string>
    <string name="answer_checked">已选答案：%s</string>
    <string name="answer_right">正确答案：%s</string>
    <string name="question_index">第%d题</string>
    <string name="question_statistics">问题统计</string>
    <string name="question_right_count">答对%d题</string>
    <string name="no_answer">未回答</string>
    <string name="question_change">换个主题</string>
    <string name="question_theme_one">进入宿舍</string>
    <string name="question_theme_two">同学朋友交往</string>
    <string name="question_theme_three">日常生活</string>
    <string name="question_theme_four">装扮背后的秘密</string>
	<string name="question_theme_six">身体姿势、坐、站、走、睡方面</string>
	<string name="question_theme_nine">商务活动</string>
	<string name="question_theme_ten">男女的情感世界</string>
	<string name="question_theme_11">情侣间</string>
	<string name="question_theme_12">侦探</string>
	<string name="question_theme_five">眼睛的心理</string>
	<string name="question_theme_seven">课堂心理学</string>
	<string name="question_theme_eight">饭店</string>
	<string name="slide_mine_doctor">我的心晴师</string>
	<string name="slide_mine_student">我的心晴生</string>
	<string name="slide_dna">我的职业DNA</string>
	<string name="slide_message">我的消息</string>
	<string name="slide_problem">常见问题</string>
	<string name="slide_collect">我的收藏</string>
	<string name="slide_blackhole">宣泄黑洞</string>
	<string name="slide_love">我的收藏</string>
	<string name="slide_point">我的积分</string>
	<string name="slide_account">我的账户</string>
	<string name="tab_one">职业点拨</string>
	<string name="tab_two">心晴师首页</string>
	<string name="tab_mine">心声宝典</string>
	<string name="login">登录</string>
	<string name="ok_login">完成并登录</string>
	<string name="register">注册</string>
	<string name="newregister">新用户注册</string>
	<string name="account">请输入账号   +86</string>
	<string name="password">请输入密码</string>
	<string name="change_pwd">输入新密码</string>
	<string name="change_pwd_second">再次输入密码</string>
	<string name="password_second">再次输入密码</string>
	<string name="nick">真实姓名</string>
	<string name="age">年龄</string>
	<string name="sex">性别</string>
	<string name="phone">电话</string>
	<string name="mail">邮箱</string>
	<string name="pwdQuestion">密保问题</string>
	<string name="pwdAnswer">密保答案</string>
	<string name="account_empty">账号不能为空</string>
	<string name="name_empty">名字不能为空</string>
	<string name="mail_empty">邮箱不能为空</string>
	<string name="mail_format_error">邮箱格式错误</string>
	<string name="pwd_empty">密码不能为空</string>
	<string name="pwd_makesure">请确认密码</string>
	<string name="pwd_diff">两次密码输入不一致</string>
	<string name="phone_empty">号码不能为空</string>
	<string name="phone_error">手机号码格式错误</string>
	<string name="age_error">请更改您的年龄</string>
	<string name="register_success">注册成功</string>
	<string name="register_failed">注册失败</string>
	<string name="login_success">登录成功</string>
	<string name="login_chat_success">登录聊天服务器成功</string>
	<string name="login_chat_failed">登录聊天服务器失败</string>
	<string name="please_input">请输入内容</string>
	<string name="please_choose_degree">请选择程度</string>
	<string name="please_choose_complete">请填写完成情况</string>
	<string name="complete">您已完成该模块任务，继续努力</string>
	<string name="complete_today">您已完成今日任务，请明天坚持</string>
	<string name="complete_mission">完成任务</string>
	<string name="fail_mission">未完成任务</string>
	<string name="test_evaluate">测试评价</string>
	<string name="comment_success">评论成功</string>
	<string name="comment_failed">评论失败</string>
	<string name="black_hole_success">%s 送入黑洞成功</string>
	<string name="black_hole_failed">送入黑洞失败</string>
	<string name="platform_one">大学无忧</string>
	<string name="platform_two">问题来了</string>
	<string name="test">测试</string>
	<string name="pic">图文</string>
	<string name="title_pic">心晴图文</string>
	<string name="title_test">心晴测试</string>
	<string name="grow_platform_one">在全新环境中驰骋</string>
	<string name="grow_platform_two">琐事缠身，学习爱好睡眠难平衡</string>
	<string name="grow_platform_three">爱ta的心渴望转化为语言和行动</string>
	<string name="grow_platform_four">演讲怯场面试紧张，害怕被拒绝</string>
	<string name="label_platform_one">入学▪初来乍到</string>
	<string name="label_platform_two">大一▪考试来了</string>
	<string name="label_platform_three">大二▪恋爱悸动</string>
	<string name="label_platform_four">大三▪发展瓶颈</string>
	<string name="cure_self">自助治疗</string>
	<string name="realy_doctor">心灵专家导师</string>
	<string name="doctor_waiting">敬请期待导师加入</string>
	<string name="depression">抑郁症</string>
	<string name="anxiety">焦虑症</string>
	<string name="force">强迫症</string>
	<string name="depression_introduce">抑郁介绍</string>
	<string name="anxiety_introduce">焦虑介绍</string>
	<string name="force_introduce">强迫介绍</string>
	<string name="problem_introduce_two">心理测试</string>
	<string name="problem_introduce_three">个人成长</string>
	<string name="problem_introduce_four">小故事</string>
	<string name="student_grow_one">日积月累</string>
	<string name="student_grow_test">效果测评</string>
	<string name="student_grow_pic">心鲜图文</string>
	<string name="black_hole">黑洞</string>
	<string name="throw_black_hole">丢入黑洞</string>
	<string name="personal_data">个人资料</string>
	<string name="mine_account">我的账户</string>
	<string name="mine_favorite">我的收藏</string>
	<string name="quit">退出登入</string>
	<string name="thinking">感想</string>
	<string name="think_title">请输入感想</string>
	<string name="publish_success">发表成功</string>
	<string name="publish_failed">发表失败</string>
	<string name="discussion">乐享会</string>
	<string name="look">查看</string>
	<string name="comment">评论</string>
	<string name="game_one">糖果鱼</string>
	<string name="more">更多</string>
	<string name="hide_comment">收起回复</string>
	<string name="grow_history">关卡记录</string>
	<string name="complete_once">成功训练一次</string>
	<string name="please_login">请您先注册登录</string>
	<string name="ok">完成</string>
    <string name="cancel">取消</string>
    <string name="send_msg_failed">发送失败</string>
    <string name="connect_failed">连接异常</string>
    <string name="connect_failed_msg">无法连接,请先登录,点击确定重新连接</string>
    <string name="not_data_warning">请点击下方按钮进行训练</string>
    <string name="please_wait">敬请期待</string>
    <string name="game_rule">活动规则</string>
    <string name="game_rule_detail">点击数字选择相应的关卡，请用7秒钟的时间记住不同位置的鱼的颜色，然后将看到的颜色复制出来。点击相应的鱼，再点击下方的颜色即可为鱼着色。
        							全部完成时，点击右上角的√即可查看得分。分数越高，说明一个人的短时记忆能力及注意力越高。</string>
	<string name="input_phone">请输入手机号</string>
	<string name="verfication_code">输入验证码</string>
	<string name="get_verfication_code">获取验证码</string>
	<string name="retry">重试</string>
	<string name="find_pwd">找回密码</string>
	<string name="change_ped_success">修改密码成功，请重新登录</string>
	<string name="online_pic">心晴短文</string>
	<string name="share_success">分享成功</string>
	<string name="share_failed">分享失败</string>
	<string name="newest_test_title">你的幽默感怎么样?</string>
	<string name="newest_test_summury">你能读懂身体语言吗?你会患冠心病吗？</string>
	<string name="open_class">开课啦</string>
	<string name="class_type_one">课堂教学</string>
	<string name="class_type_two">家庭作业</string>
	<string name="class_type_three">课堂游戏</string>
	<string name="student_entry">心晴生</string>
	<string name="teacher_entry">心晴师</string>
	<string name="xingzuo">星座</string>
	<string name="xingzuo_baiyang">白羊座</string>
	<string name="xingzuo_jinniu">金牛座</string>
	<string name="xingzuo_shuangzi">双子座</string>
	<string name="xingzuo_jvxie">巨蟹座</string>
	<string name="xingzuo_shizi">狮子座</string>
	<string name="xingzuo_chunv">处女座</string>
	<string name="xingzuo_tiancheng">天秤座</string>
	<string name="xingzuo_tianxie">天蝎座</string>
	<string name="xingzuo_sheshou">射手座</string>
	<string name="xingzuo_mojie">摩羯座</string>
	<string name="xingzuo_shuiping">水瓶座</string>
	<string name="xingzuo_shuangyu">双鱼座</string>
	<string name="avatar">头像</string>
	<string name="household">籍贯</string>
	<string name="diploma">学历</string>
	<string name="school">学校</string>
	<string name="diploma_one">本科</string>
	<string name="diploma_two">硕士</string>
	<string name="diploma_three">博士</string>
	<string name="diploma_four">其他</string>
	<string name="major">专业</string>
	<string name="graduation_year">毕业年份</string>
	<string name="current_state">状态</string>
	<string name="working_city">所在城市</string>
	<string name="state_teacher_one">硕士</string>
	<string name="state_teacher_two">博士</string>
	<string name="state_teacher_three">白领</string>
	<string name="state_teacher_four">企业家</string>
	<string name="state_teacher_five">留学生</string>
	<string name="state_teacher_six">公务员</string>
	<string name="state_student_one">考研</string>
	<string name="state_student_two">考博</string>
	<string name="state_student_three">求职</string>
	<string name="state_student_four">创业</string>
	<string name="state_student_five">出国</string>
	<string name="state_student_six">考公务员</string>
	<string name="industry">行业</string>
	<string name="industry_one">IT互联网</string>
	<string name="industry_two">文化传媒</string>
	<string name="industry_three">通信</string>
	<string name="industry_four">金融</string>
	<string name="industry_five">教育培训</string>
	<string name="industry_six">医疗生物</string>
	<string name="industry_seven">政府科研</string>
	<string name="industry_eight">司法法律</string>
	<string name="industry_nine">房产建筑</string>
	<string name="industry_ten">服务业</string>
	<string name="industry_eleven">轻工贸易</string>
	<string name="industry_twelve">电子电气</string>
	<string name="industry_thirteen">机械重工</string>
	<string name="industry_fourteen">农林牧渔</string>
	<string name="industry_fifteen">新能源</string>
	<string name="industry_sixteen">物联网</string>
	<string name="industry_seventeen">化工环保</string>
	<string name="industry_eighteen">其他</string>
	<string name="major_one">哲学</string>
	<string name="major_two">经济学</string>
	<string name="major_three">法学</string>
	<string name="major_four">教育学</string>
	<string name="major_five">文学</string>
	<string name="major_six">历史学</string>
	<string name="major_seven">理学</string>
	<string name="major_eight">工学</string>
	<string name="major_nine">农学</string>
	<string name="major_ten">医学</string>
	<string name="major_eleven">管理学</string>
	<string name="major_twelve">艺术学</string>
	<string name="zhiye_one">常规型(C)</string>
	<string name="zhiye_two">现实型(R)</string>
	<string name="zhiye_three">研究型(I)</string>
	<string name="zhiye_four">管理型(E)</string>
	<string name="zhiye_five">社会型(S)</string>
	<string name="zhiye_six">艺术型(A)</string>
	<string name="qizhi_one">多血质</string>
	<string name="qizhi_two">胆汁质</string>
	<string name="qizhi_three">黏液质</string>
	<string name="qizhi_four">抑郁质</string>
	<string name="attention">关注</string>
	<string name="mine_attention">我的关注</string>
	<string name="mine_DNA">职业DNA</string>
	<string name="about">关于我们</string>
	<string name="howuse">如何使用</string>
	<string name="relation">联系我们</string>
	<string name="feedback">用户反馈</string>
	<string name="grade">星用户</string>
	<string name="code">手机短信获取验证码</string>
</resources>