<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/thought_question_bg" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="250dp"
	    android:gravity="center"
	    android:orientation="vertical">
	    <Button 
	        android:id="@+id/theme_one_btn"
	        style="@style/question_btn_style"
	        android:text="@string/question_theme_one"/>
	    <Button 
	        android:id="@+id/theme_two_btn"
	        style="@style/question_btn_style"
	        android:text="@string/question_theme_two"/>
	    <Button 
	        android:id="@+id/theme_three_btn"
	        style="@style/question_btn_style"
	        android:text="@string/question_theme_two"/>
	    <Button 
	        android:id="@+id/theme_four_btn"
	        style="@style/question_btn_style"
	        android:text="@string/question_theme_ten"/>
	    <Button 
	        android:id="@+id/theme_five_btn"
	        style="@style/question_btn_style"
	        android:text="@string/question_theme_11"/>
	</LinearLayout>
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="20dp"
	    android:text="@string/comp_name"
	    android:textColor="@android:color/white"
	    android:layout_centerHorizontal="true"
	    android:layout_alignParentBottom="true"
	    android:visibility="gone"/>
</RelativeLayout>
