<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/bg_gray">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
		<EditText 
		    android:id="@+id/nick_et"
		    android:layout_marginTop="10dp"
		    style="@style/edit_style"
		    android:hint="@string/nick"/>   
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="50dp"
		    android:layout_marginTop="10dp"
		    android:gravity="center_vertical">
		    <LinearLayout 
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="match_parent"
		        android:gravity="center_vertical">
		    	<TextView 
		    	    android:layout_marginLeft="5dp"
			        style="@style/text_black18_style"
			        android:text="@string/sex"/>
			    <RadioGroup 
			        android:id="@+id/sex_rg"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:checkedButton="@+id/man_rb"
			        android:orientation="horizontal"
			        android:layout_marginLeft="10dp">
			        <RadioButton 
			            android:id="@+id/man_rb"
			            android:layout_width="0dp"
			            android:layout_weight="1"
			            android:layout_height="match_parent"
			            android:textColor="@color/black"
			            android:textSize="16sp"
			            android:text="男"/>
			        <RadioButton 
			            android:id="@+id/woman_rb"
			            android:layout_width="0dp"
			            android:layout_weight="1"
			            android:layout_height="match_parent"
			            android:textColor="@color/black"
			            android:textSize="16sp"
			            android:text="女"/>
			    </RadioGroup>    
		    </LinearLayout>
		    <EditText
		        android:id="@+id/age_et"
		        style="@style/edit_style" 
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:hint="@string/age"
		        android:inputType="number"/>
		</LinearLayout>
		<EditText 
		    android:id="@+id/phone_et"
		    android:layout_marginTop="10dp"
		    style="@style/edit_style"
		    android:hint="@string/phone"
		    android:inputType="phone"/>
		<EditText 
		    android:id="@+id/mail_et"
		    android:layout_marginTop="10dp"
		    style="@style/edit_style"
		    android:hint="@string/mail"/>
		<EditText 
		    android:id="@+id/pwd_question_et"
		    android:layout_marginTop="10dp"
		    style="@style/edit_style"
		    android:hint="@string/pwdQuestion"/>
		<EditText 
		    android:id="@+id/pwd_answer_et"
		    android:layout_marginTop="10dp"
		    style="@style/edit_style"
		    android:hint="@string/pwdAnswer"/>
		<Button 
	        android:id="@+id/register_btn"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:layout_marginTop="10dp"
	        android:background="@drawable/bg_blue_selector"
	        android:text="@string/register"
	        android:textSize="16sp"
	        android:textColor="#ffffff"/>
	</LinearLayout>
</ScrollView>
