<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:visibility="gone">
        <TextView 
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/login"/>
        <TextView 
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/register"
            android:layout_marginLeft="50dp"/>
    </LinearLayout>
	<android.support.v4.view.ViewPager
	    android:id="@+id/main_vp"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"/>
	<RadioGroup 
	    android:id="@+id/tab_rg"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:checkedButton="@+id/tab_one_rb"
	    android:orientation="horizontal">
	    <RadioButton 
	        android:id="@+id/tab_one_rb"
	        style="@style/tab_button_style"
	        android:drawableTop="@drawable/tab_icon_first_selector"
	        android:text="@string/tab_one"/>
	    <RadioButton 
	        android:id="@+id/tab_two_rb"
	        style="@style/tab_button_style"
	        android:drawableTop="@drawable/tab_icon_second_selector"
	        android:text="@string/tab_two"/>
	    <RadioButton 
	        android:id="@+id/tab_three_rb"
	        style="@style/tab_button_style"
	        android:drawableTop="@drawable/tab_icon_third_selector"
	        android:text="@string/tab_mine"/>
	</RadioGroup>
    
</LinearLayout>
