<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ece9e4"
    android:paddingLeft="40dp"
    android:paddingRight="40dp">
    <EditText
        android:id="@+id/phone_et" 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="12dp"
        android:background="@drawable/bg_edit"
        android:layout_marginTop="76dp"
        android:hint="@string/input_phone"
        android:textColorHint="#8e8e8e"
        android:inputType="phone"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:layout_marginTop="13dp"
	    android:orientation="horizontal">

		<EditText
		    android:id="@+id/code_et"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:background="@drawable/bg_edit"
		    android:ems="10"
		    android:hint="@string/verfication_code"
		    android:paddingLeft="12dp"
		    android:textColor="@color/black"
		    android:textColorHint="#8e8e8e"
		    android:textSize="18sp" >

		    <requestFocus />
		</EditText>

	     <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:orientation="horizontal">
	        <TextView 
	            android:layout_width="25dp"
	            android:layout_height="match_parent"/>
	         <TextView 
	        android:id="@+id/get_code_tv"
	        android:layout_width="match_parent"
	        android:layout_height="48dp"
	        android:textSize="16sp"
	        android:gravity="center"
	        android:text="@string/get_verfication_code"
	        android:textColor="#ffffff"
	        android:background="@drawable/bg_red_checked_shape"/>

	       </LinearLayout>
	</LinearLayout>
	<EditText 
	    android:id="@+id/password_et"
	    android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edit"
	    android:layout_marginTop="13dp"
	    android:paddingLeft="12dp"
	    android:hint="@string/change_pwd"
	    android:textColorHint="#8e8e8e"
	    android:inputType="textPassword"/>
	<EditText 
	    android:id="@+id/second_password_et"
	     android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="12dp"
        android:background="@drawable/bg_edit"
        android:textColorHint="#8e8e8e"
	    android:layout_marginTop="13dp"
	    android:hint="@string/change_pwd_second"
	    android:inputType="textPassword"/>
	<TextView 
	    android:id="@+id/change_ok_tv"
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:layout_marginTop="36dp"
	    android:textSize="18sp"
	    android:textColor="#ffffff"
	    android:text="@string/ok"
	    android:gravity="center"
	    android:background="@drawable/bg_save_btn_shape"/>
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="21dp"
		android:gravity="center"
	    android:textSize="11sp"
	    android:textColor="#505050"
	    android:text="@string/code"/>
</LinearLayout>
