<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/bg_gray"
    android:padding="20dp">
    <EditText 
        android:id="@+id/account_et"
        style="@style/edit_style"
        android:hint="@string/account"/>
    <EditText 
        android:id="@+id/psw_et"
        style="@style/edit_style"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"/>
    <Button 
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_blue_selector"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="#ffffff"/>

</LinearLayout>
