<?xml version="1.0" encoding="utf-8"?>
<!-- 帮助页面 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_howuse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/about"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/howuse" />

    <Button
        android:id="@+id/btn_relation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/howuse"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/relation" />

    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relation"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/feedback" />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/about" />

</RelativeLayout>