<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/bg_gray">
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:background="@drawable/bg_mine_info">
        <LinearLayout 
            android:id="@+id/mine_unlogin_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone">
            <Button 
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_login_btn"
                android:text="@string/login"
                android:textColor="#ffffff"/>
            <Button 
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_login_btn"
                android:text="@string/register"
                android:textColor="#ffffff"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/mine_load_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">
            <ImageView 
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:src="@drawable/icon_mine_head"/>
            <TextView 
                android:id="@+id/mine_name_tv"
                style="@style/text_black18_style"
                android:layout_marginTop="10dp"
                android:text="assddsa"/>
        </LinearLayout>
    </RelativeLayout>
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_mine_line"/>
    <TextView 
        android:id="@+id/quit_btn"
        style="@style/text_black18_style"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:text="@string/quit"
        android:visibility="gone"
        android:gravity="center"/>
    <Button 
        android:id="@+id/personal_data_btn"
        style="@style/question_btn_style"
        android:text="@string/personal_data"/>
    <Button 
        android:id="@+id/mine_account_btn"
        style="@style/question_btn_style"
        android:text="@string/mine_account"/>
    <Button 
        android:id="@+id/mine_favorite_btn"
        style="@style/question_btn_style"
        android:text="@string/mine_favorite"/>
</LinearLayout>
