<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/bg_gray">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView 
            android:id="@+id/tv_name"
            style="@style/text_black18_style"
            android:layout_gravity="center_horizontal"/>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:layout_marginTop="10dp"
		    android:gravity="center_vertical">
		    <TextView 
		        style="@style/text_black18_style"
		        android:text="@string/xingzuo"/>
		    <TextView 
		        android:id="@+id/tv_xingzuo"
		        style="@style/text_black18_style"
		        android:layout_marginLeft="10dp"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:layout_marginTop="10dp"
		    android:gravity="center_vertical">
		    <TextView 
		        style="@style/text_black18_style"
		        android:text="@string/household"/>
		    <TextView 
		        android:id="@+id/tv_household"
		        style="@style/text_black18_style"
		        android:layout_marginLeft="10dp"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:layout_marginTop="10dp"
		    android:gravity="center_vertical">
		    <TextView 
		        style="@style/text_black18_style"
		        android:text="@string/diploma"/>
		    <TextView 
		        android:id="@+id/tv_diploma"
		        style="@style/text_black18_style"
		        android:layout_marginLeft="10dp"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:layout_marginTop="10dp"
		    android:gravity="center_vertical">
		    <TextView 
		        style="@style/text_black18_style"
		        android:text="@string/school"/>
		    <TextView 
		        android:id="@+id/tv_school"
		        style="@style/text_black18_style"
		        android:layout_marginLeft="10dp"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:layout_marginTop="10dp"
		    android:gravity="center_vertical">
		    <TextView 
		        style="@style/text_black18_style"
		        android:text="@string/graduation_year"/>
		    <TextView 
		        android:id="@+id/tv_graduation_year"
		        style="@style/text_black18_style"
		        android:layout_marginLeft="10dp"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:layout_marginTop="10dp"
		    android:gravity="center_vertical">
		    <TextView 
		        style="@style/text_black18_style"
		        android:text="@string/major"/>
		    <TextView 
		        android:id="@+id/tv_major"
		        style="@style/text_black18_style"
		        android:layout_marginLeft="10dp"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:layout_marginTop="10dp"
		    android:gravity="center_vertical">
		    <TextView 
		        style="@style/text_black18_style"
		        android:text="@string/current_state"/>
		    <TextView 
		        android:id="@+id/tv_state"
		        style="@style/text_black18_style"
		        android:layout_marginLeft="10dp"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:layout_marginTop="10dp"
		    android:gravity="center_vertical">
		    <TextView 
		        style="@style/text_black18_style"
		        android:text="@string/working_city"/>
		    <TextView 
		        android:id="@+id/tv_working_city"
		        style="@style/text_black18_style"
		        android:layout_marginLeft="10dp"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:layout_marginTop="10dp"
		    android:gravity="center_vertical">
		    <TextView 
		        style="@style/text_black18_style"
		        android:text="@string/industry"/>
		    <TextView 
		        android:id="@+id/tv_industry"
		        style="@style/text_black18_style"
		        android:layout_marginLeft="10dp"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:layout_marginTop="10dp"
		    android:gravity="center_vertical">
		    <TextView 
		        style="@style/text_black18_style"
		        android:text="@string/grade"/>
		    <TextView 
		        android:id="@+id/tv_grade"
		        style="@style/text_black18_style"
		        android:layout_marginLeft="10dp"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:layout_marginTop="10dp"
		    android:gravity="center_vertical">
		    <TextView 
		        style="@style/text_black18_style"
		        android:text="@string/hobbies"/>
		    <TextView 
		        android:id="@+id/tv_hobbies"
		        style="@style/text_black18_style"
		        android:layout_marginLeft="10dp"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:layout_marginTop="10dp"
		    android:gravity="center_vertical">
		    <TextView 
		        style="@style/text_black18_style"
		        android:text="@string/follow"/>
		    <TextView 
		        android:id="@+id/tv_follow"
		        style="@style/text_black18_style"
		        android:layout_marginLeft="10dp"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>
