<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
        style="@style/text_gray16_style"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:text="@string/mine_account"/>
	<ImageView 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@color/divider"/>
	<TextView 
	    android:id="@+id/tv_attention"
        style="@style/text_black18_style"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:text="@string/mine_attention"/>
	<ImageView 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@color/divider"/>
	<TextView 
	    android:id="@+id/tv_dna"
        style="@style/text_black18_style"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:text="@string/mine_DNA"/>
	<ImageView 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@color/divider"/>
</LinearLayout>
